--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <h1>前端笔记</h1>
     <section>
-        <h2>CSS</h2>
+        <h2>HTML CSS</h2>
+        <ul>
+            <li><a href="/HTML' 'CSS/1linelayouts">1linelayouts</a></li>
+        </ul>
+    </section>
+    <section>
+        <h2>JavaScript</h2>
         <ul>
             <li></li>
         </ul>
