--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
         <h2>HTML CSS</h2>
         <ul>
-            <li><a href="/HTML' 'CSS/1linelayouts">1linelayouts</a></li>
+            <li><a href="./HTML CSS/1linelayouts/index.html">1linelayouts</a></li>
         </ul>
     </section>
     <section>
