--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>HTML CSS</h2>
         <ul>
             <li><a href="./HTML CSS/1linelayouts/index.html">1linelayouts</a></li>
+            <li><a href="./HTML CSS/Defensive CSS/index.html">Defensive CSS</a></li>
         </ul>
     </section>
     <section>
