--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
         <ul>
             <li><a href="./HTML CSS/1linelayouts/index.html">1linelayouts</a></li>
             <li><a href="./HTML CSS/Defensive CSS/index.html">Defensive CSS</a></li>
+            <li><a href="./HTML CSS/data-/index.html">data-* attribute</a></li>
+            <li><a href="./HTML CSS/Flexbox Dynamic Line Separator/">Flexbox Dynamic Line Separator</a></li>
+            <li><a href="./HTML CSS/img-loading-lazy/index.html">img-loading-lazy</a></li>
+            <li><a href="./HTML CSS/multiple-languages/index.html">multiple-languages</a></li>
         </ul>
     </section>
     <section>
         <h2>JavaScript</h2>
         <ul>
-            <li></li>
+            <li><a href="./JS/async/index.html">async</a></li>
+            <li><a href="./JS/Clipboard-API/index.html">Clipboard-API</a></li>
+            <li><a href="./JS/demo.json/index.html">demo.json</a></li>
         </ul>
     </section>
 </body>
