--- a/CopyPage/1/index.html
+++ b/CopyPage/1/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="owl.carousel.min.css">
+    <link rel="stylesheet" href="./../../vendor/owl.carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="style.css">
     <title>仿写H5页面</title>
 </head>
@@ -234,7 +234,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="owl.carousel.min.js"></script>
+    <script src="./../../vendor/owl.carousel/owl.carousel.min.js"></script>
     <script>
         $('.owl-carousel').owlCarousel({
             loop:true,
@@ -259,3 +259,10 @@
     </script>
 </body>
 </html>
+
+$(document).ready(function(){
+    let launchDate = new Data(" May 18, 2022 ");
+
+    $("#button1").label = "Tell me more > ";
+    $("#button1").link = 'waiting ...'
+}
