--- a/other/test/index.html
+++ b/other/test/index.html
@@ -134,8 +134,8 @@
       
 
       $(document).ready(function () {
-        var fullUrl = "https://main.qcloudimg.com/raw/document/debug/product/pdf/647_32227_cn.pdf"
-        let path = "647_32227_cn.pdf";
+        var fullUrl = "https://annging.github.io/demo/other/test/pdf/4400002023004UKPYX.pdf"
+        let path = "4400002023004UKPYX.pdf";
         var html = "";
         if (path.split(".")[1] === "pdf") {
           html =
