--- a/other/test/index.html
+++ b/other/test/index.html
@@ -139,9 +139,7 @@
         var html = "";
         if (path.split(".")[1] === "pdf") {
           html =
-            '<iframe src="' +
-            ctx +
-            "/pdfJs/web/viewer.html?file=" +
+            '<iframe src="https://annging.github.io/demo/other/test/asserts/viewer.html?file=" +
             fullUrl +
             '&zoom=0.5&top=25&left=36" width="100%" height="500px"></iframe>';
         } else {
